--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "npm": "^8.14.0",
     "ramda": "^0.28.0",
     "reflect-metadata": "^0.1.13",
@@ -44,6 +45,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
     "@types/ramda": "^0.28.15",
     "@types/supertest": "^2.0.11",
