--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 /dist
 /node_modules
 
-*.org
-.env
-
 # Logs
 logs
 *.log
@@ -36,3 +33,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# emacs
+.dir-locals.el
+.projectile
+*.org
