--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -30,6 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.4",
     "@ntegral/nestjs-s3": "^1.0.3",
+    "@nuxtjs/proxy": "^2.1.0",
     "@prisma/client": "^4.0.0",
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1178.0",
@@ -49,8 +51,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.5.0",
-    "uuid": "^8.3.2",
-    "@nestjs/cli": "^9.0.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
